tests/models/struct/named/i32/fail/max_items.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/struct/named/i32/fail/max_items.rs:5:5
  |
5 |     value: i32,
  |     ^^^^^
